[gd_scene load_steps=2 format=3 uid="uid://dgh2j1p3ooyal"]

[ext_resource type="Script" uid="uid://blj2dd6eipqyu" path="res://scripts/effects/ambient_ui_effects.gd" id="1_ambient"]

[node name="AmbientUIEffects" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ambient")

[node name="CandleFlicker" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.8, 0.4, 0.2, 0.05)

[node name="VignetteEffect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="FlickerTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true
